@@ -1,5 +1,8 @@
 2006-11-07  Don Allingham  <don@gramps-project.org>
 	* src/plugins/RemoveUnused.py: general cleanup
+	* src/DataViews/_RelationshipView.py: Optionally hide Edit buttons
+	* src/Config/_GrampsConfigKeys.py: Optionally hide Edit buttons
+	* src/GrampsWidgets.py: Allow empty button for LinkBox
 
 2006-11-07  Alex Roitman  <shura@gramps-project.org>
 	* src/DataViews/_RelationView.py (info_string): Add missing clause.
